--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>T-Rex Designs - Chicago Website Development - Ruby on Rails - WordPress</title>
+    <title>Free Resume Generator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <%= yield :head %>
     <%= stylesheet_link_tag  "application", media: "all", "data-turbolinks-track" => true %>
