--- a/app/views/resumes/index.html.erb
+++ b/app/views/resumes/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>Target job</th>
       <th>Objective</th>
+      <th>User ID</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +17,7 @@
       <tr>
         <td><%= resume.target_job %></td>
         <td><%= resume.objective %></td>
+        <td><%= resume.user_id %></td>
         <td><%= link_to 'Show', resume %></td>
         <td><%= link_to 'Edit', edit_resume_path(resume) %></td>
         <td><%= link_to 'Destroy', resume, method: :delete, data: { confirm: 'Are you sure?' } %></td>
