user id added to other tables

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
       <div class="custom-ym-wrapper">
         <div class="ym-hlist">
           <ul>            
+            <li><%= link_to "Full Resume", full_resumes_path %></li>
             <li><%= link_to "Users", users_path %></li>
             <li><%= link_to "Resume", resumes_path %></li>
             <li><%= link_to "Contact", contacts_path %></li>
