--- a/app/views/languages/_form.html.erb
+++ b/app/views/languages/_form.html.erb
@@ -15,6 +15,10 @@
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
+  <div class="field hidden">
+    <%= f.label :user_id %><br>
+    <%= f.text_field :user_id, value: current_user.id  %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
