--- a/app/views/resumes/_form.html.erb
+++ b/app/views/resumes/_form.html.erb
@@ -19,9 +19,9 @@
     <%= f.label :objective %><br>
     <%= f.text_field :objective %>
   </div>
-  <div class="field">
+  <div class="field hidden">
     <%= f.label :user_id %><br>
-    <%= f.text_field :user_id %>
+    <%= f.text_field :user_id, value: current_user.id  %>
   </div>
   <div class="actions">
     <%= f.submit %>
