--- a/app/views/school_achievements/_form.html.erb
+++ b/app/views/school_achievements/_form.html.erb
@@ -23,6 +23,10 @@
     <%= f.label :description %><br>
     <%= f.text_field :description %>
   </div>
+  <div class="field hidden">
+    <%= f.label :user_id %><br>
+    <%= f.text_field :user_id, value: current_user.id  %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
