work and school on full resume

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,6 +1,6 @@
 @charset "utf-8"
 /* Non Premium Variables */
-$primary_color: #144b64
+$primary_color: #000099 
 
 $dark_shade: darken($primary_color, 10%)
 $darker_shade: darken($primary_color, 16%)
