--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
           <ul>            
             <li><%= link_to "Full Resume", full_resumes_path %></li>
             <li><%= link_to "Users", users_path %></li>
+            <li><%= link_to "Miscellanous", miscellaneous_path %></li>
             <li><%= link_to "Resume", resumes_path %></li>
             <li><%= link_to "Contact", contacts_path %></li>
             <li><%= link_to "Work", works_path %></li>
