--- a/app/views/full_resumes/index.html.erb
+++ b/app/views/full_resumes/index.html.erb
@@ -1,21 +1,33 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Full Resumes</h1>
-<%= @user.id %>
+<%= @user.first_name + " " + @user.last_name %>
 <%= @resume.objective %>
 <table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
   <tbody>
-    <% @full_resumes.each do |full_resume| %>
+    <% @works.each do |work| %>
       <tr>
-        <td><%= link_to 'Show', full_resume %></td>
-        <td><%= link_to 'Edit', edit_full_resume_path(full_resume) %></td>
-        <td><%= link_to 'Destroy', full_resume, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= work.title %></td>
+        <td><%= work.company %></td>
+        <td><%= work.city %></td>
+        <td><%= work.state %></td>
+        <td><%= work.start_date %></td>
+        <td><%= work.end_date %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+<table>
+  <tbody>
+    <% @schools.each do |school| %>
+      <tr>
+        <td><%= school.name %></td>
+        <td><%= school.city %></td>
+        <td><%= school.state %></td>
+        <td><%= school.completion_date %></td>
+        <td><%= school.field_of_study %></td>
       </tr>
     <% end %>
   </tbody>
@@ -23,4 +35,3 @@
 
 <br>
 
-<%= link_to 'New Full resume', new_full_resume_path %>
