--- a/app/views/schools/_form.html.erb
+++ b/app/views/schools/_form.html.erb
@@ -31,6 +31,10 @@
     <%= f.label :field_of_study %><br>
     <%= f.text_field :field_of_study %>
   </div>
+  <div class="field hidden">
+    <%= f.label :user_id %><br>
+    <%= f.text_field :user_id, value: current_user.id  %>
+  </div>  
   <div class="actions">
     <%= f.submit %>
   </div>
