--- a/app/views/works/_form.html.erb
+++ b/app/views/works/_form.html.erb
@@ -35,6 +35,10 @@
     <%= f.label :end_date %><br>
     <%= f.date_select :end_date %>
   </div>
+  <div class="field hidden">
+    <%= f.label :user_id %><br>
+    <%= f.text_field :user_id, value: current_user.id  %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
