capable of adding work duties beneath work

--- a/app/views/work_duties/_form.html.erb
+++ b/app/views/work_duties/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :work_id %><br>
-    <%= f.text_field :work_id %>
+    <%= f.text_field :work_id, value: params[:work_id] %>
   </div>
   <div class="field">
     <%= f.label :task %><br>
