--- a/app/assets/stylesheets/scaffolds.sass
+++ b/app/assets/stylesheets/scaffolds.sass
@@ -97,7 +97,49 @@ ul li
   min-width: 100px
 
 
-a.button
+
+a.buttonA 
+  -moz-box-shadow: inset 0px 0px 14px -3px #f2fadc
+  -webkit-box-shadow: inset 0px 0px 14px -3px #f2fadc
+  box-shadow: inset 0px 0px 14px -3px #f2fadc
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #dbe6c4), color-stop(1, #9ba892))
+  background: -moz-linear-gradient(top, #dbe6c4 5%, #9ba892 100%)
+  background: -webkit-linear-gradient(top, #dbe6c4 5%, #9ba892 100%)
+  background: -o-linear-gradient(top, #dbe6c4 5%, #9ba892 100%)
+  background: -ms-linear-gradient(top, #dbe6c4 5%, #9ba892 100%)
+  background: linear-gradient(to bottom, #dbe6c4 5%, #9ba892 100%)
+  background-color: #dbe6c4
+  -moz-border-radius: 6px
+  -webkit-border-radius: 6px
+  border-radius: 6px
+  border: 1px solid #b2b8ad
+  display: inline-block
+  cursor: pointer
+  color: #757d6f
+  font-family: Arial
+  font-size: 15px
+  font-weight: bold
+  padding: 6px 24px
+  text-decoration: none
+  text-shadow: 0px 1px 0px #ced9bf
+
+a.buttonA:hover 
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #9ba892), color-stop(1, #dbe6c4))
+  background: -moz-linear-gradient(top, #9ba892 5%, #dbe6c4 100%)
+  background: -webkit-linear-gradient(top, #9ba892 5%, #dbe6c4 100%)
+  background: -o-linear-gradient(top, #9ba892 5%, #dbe6c4 100%)
+  background: -ms-linear-gradient(top, #9ba892 5%, #dbe6c4 100%)
+  background: linear-gradient(to bottom, #9ba892 5%, #dbe6c4 100%)
+  background-color: #9ba892
+
+a.buttonA:active 
+  position: relative
+  top: 1px
+
+
+        
+
+a.buttonB
   background: #ECECEC
   border-radius: 15px
   padding: 10px 20px
@@ -113,13 +155,132 @@ a.button
   box-shadow: 0px 2px 1px white inset, 0px -2px 8px white, 0px 2px 5px rgba(0, 0, 0, 0.1), 0px 8px 10px rgba(0, 0, 0, 0.1)
   -webkit-transition: box-shadow 0.5s
 
-a.button i
+a.buttonB i
   float: right
   margin-top: 2px
 
-a.button:hover
+a.buttonB:hover
   box-shadow: 0px 2px 1px white inset, 0px -2px 20px white, 0px 2px 5px rgba(0, 0, 0, 0.1), 0px 8px 10px rgba(0, 0, 0, 0.1)
 
-a.button:active
+a.buttonB:active
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5) inset, 0px -2px 20px white, 0px 1px 5px rgba(0, 0, 0, 0.1), 0px 2px 10px rgba(0, 0, 0, 0.1)
   background: -webkit-linear-gradient(top, #d1d1d1 0%,#ECECEC 100%)
+
+
+a.show 
+  -moz-box-shadow: inset 0px 1px 0px 0px #97c4fe
+  -webkit-box-shadow: inset 0px 1px 0px 0px #97c4fe
+  box-shadow: inset 0px 1px 0px 0px #97c4fe
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #3d94f6), color-stop(1, #1e62d0))
+  background: -moz-linear-gradient(top, #3d94f6 5%, #1e62d0 100%)
+  background: -webkit-linear-gradient(top, #3d94f6 5%, #1e62d0 100%)
+  background: -o-linear-gradient(top, #3d94f6 5%, #1e62d0 100%)
+  background: -ms-linear-gradient(top, #3d94f6 5%, #1e62d0 100%)
+  background: linear-gradient(to bottom, #3d94f6 5%, #1e62d0 100%)
+  background-color: #3d94f6
+  -moz-border-radius: 6px
+  -webkit-border-radius: 6px
+  border-radius: 6px
+  border: 1px solid #337fed
+  display: inline-block
+  cursor: pointer
+  color: #ffffff
+  font-family: Arial
+  font-size: 15px
+  font-weight: bold
+  padding: 6px 24px
+  text-decoration: none
+  text-shadow: 0px 1px 0px #1570cd
+
+a.show:hover 
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #1e62d0), color-stop(1, #3d94f6))
+  background: -moz-linear-gradient(top, #1e62d0 5%, #3d94f6 100%)
+  background: -webkit-linear-gradient(top, #1e62d0 5%, #3d94f6 100%)
+  background: -o-linear-gradient(top, #1e62d0 5%, #3d94f6 100%)
+  background: -ms-linear-gradient(top, #1e62d0 5%, #3d94f6 100%)
+  background: linear-gradient(to bottom, #1e62d0 5%, #3d94f6 100%)
+  background-color: #1e62d0
+
+a.show:active 
+  position: relative
+  top: 1px
+
+a.delete 
+  -moz-box-shadow: inset 0px 1px 0px 0px #f29c93
+  -webkit-box-shadow: inset 0px 1px 0px 0px #f29c93
+  box-shadow: inset 0px 1px 0px 0px #f29c93
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #fe1a00), color-stop(1, #ce0100))
+  background: -moz-linear-gradient(top, #fe1a00 5%, #ce0100 100%)
+  background: -webkit-linear-gradient(top, #fe1a00 5%, #ce0100 100%)
+  background: -o-linear-gradient(top, #fe1a00 5%, #ce0100 100%)
+  background: -ms-linear-gradient(top, #fe1a00 5%, #ce0100 100%)
+  background: linear-gradient(to bottom, #fe1a00 5%, #ce0100 100%)
+  background-color: #fe1a00
+  -moz-border-radius: 6px
+  -webkit-border-radius: 6px
+  border-radius: 6px
+  border: 1px solid #d83526
+  display: inline-block
+  cursor: pointer
+  color: #ffffff
+  font-family: Arial
+  font-size: 15px
+  font-weight: bold
+  padding: 6px 24px
+  text-decoration: none
+  text-shadow: 0px 1px 0px #b23e35
+
+a.delete:hover 
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ce0100), color-stop(1, #fe1a00))
+  background: -moz-linear-gradient(top, #ce0100 5%, #fe1a00 100%)
+  background: -webkit-linear-gradient(top, #ce0100 5%, #fe1a00 100%)
+  background: -o-linear-gradient(top, #ce0100 5%, #fe1a00 100%)
+  background: -ms-linear-gradient(top, #ce0100 5%, #fe1a00 100%)
+  background: linear-gradient(to bottom, #ce0100 5%, #fe1a00 100%)
+  background-color: #ce0100
+
+a.delete:active 
+  position: relative
+  top: 1px
+
+
+a.edit 
+  -moz-box-shadow: inset 0px 1px 0px 0px #a6827e
+  -webkit-box-shadow: inset 0px 1px 0px 0px #a6827e
+  box-shadow: inset 0px 1px 0px 0px #a6827e
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #7d5d3b), color-stop(1, #634b30))
+  background: -moz-linear-gradient(top, #7d5d3b 5%, #634b30 100%)
+  background: -webkit-linear-gradient(top, #7d5d3b 5%, #634b30 100%)
+  background: -o-linear-gradient(top, #7d5d3b 5%, #634b30 100%)
+  background: -ms-linear-gradient(top, #7d5d3b 5%, #634b30 100%)
+  background: linear-gradient(to bottom, #7d5d3b 5%, #634b30 100%)
+  background-color: #7d5d3b
+  -moz-border-radius: 3px
+  -webkit-border-radius: 3px
+  border-radius: 3px
+  border: 1px solid #54381e
+  display: inline-block
+  cursor: pointer
+  color: #ffffff
+  font-family: Arial
+  font-size: 13px
+  padding: 6px 24px
+  text-decoration: none
+  text-shadow: 0px 1px 0px #4d3534
+
+a.edit:hover 
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #634b30), color-stop(1, #7d5d3b))
+  background: -moz-linear-gradient(top, #634b30 5%, #7d5d3b 100%)
+  background: -webkit-linear-gradient(top, #634b30 5%, #7d5d3b 100%)
+  background: -o-linear-gradient(top, #634b30 5%, #7d5d3b 100%)
+  background: -ms-linear-gradient(top, #634b30 5%, #7d5d3b 100%)
+  background: linear-gradient(to bottom, #634b30 5%, #7d5d3b 100%)
+  background-color: #634b30
+
+a.edit:active 
+  position: relative
+  top: 1px
+
+
+            
+    
